syntax = "proto3";

package generic;

service Eventing {
    rpc StartEventSource(EventSource) returns (stream Event);
}

message EventSource {
    // The event source name.
    string name = 1;
    // The event source configuration value.
    bytes config = 2;
}

/**
* Represents an event
*/
message Event {
    // The event source name.
    string name = 1;
    // The event payload.
    bytes payload = 2;
}
